fixed insufficient contrast on footer

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -403,7 +403,7 @@ input[type="file"].upload_embedded {
 div#footer {
   clear: both;
   font-size: 14px;
-  color: #888;
+  color: #212121;
   height: 42px;
   padding: 0 10px;
   margin-top: 16px;
@@ -418,7 +418,7 @@ div#footer a,
 div#footer span.site_version {
   display: inline-block;
   padding: 12px;
-  color: #666;
+  color: #212121;
 }
 
 div#footer span.site_version {
